--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <h1>
             <button>
                 <p>LIKE</p>
-                <spaN></spaN>
+                <span></span>
             </button>
             <button>
                 <p>HAHA</p>
-                <spaN></spaN>
+                <span></span>
             </button>
             <button>
                 <p>WOW</p>
-                <spaN></spaN>
+                <span></span>
             </button>
             <button>
                 <p>HEART</p>
-                <spaN></spaN>
+                <span></span>
             </button>
         </h1>
     </footer>
